--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Mei's portfolio</title>
   </head>
-  <body style="background-color: pink; margin: 0;">
+  <body style="background-color: pink; margin: 0px;">
     <div id="app"></div>
     <script src="/dist/build.js"></script>
   </body>
