--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Mei's portfolio</title>
   </head>
   <body style="background-color: #272822; margin: 0px;">
+  <div class="line" style="position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  width: 50px;
+  height: 95vh;
+  background-color: white; z-index:-1"></div>
+
     <div id="app"></div>
     <script src="/dist/build.js"></script>
   </body>
