--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     z-index: -1"></div>
 
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="dist/build.js"></script>
   </body>
 </html>
