--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" content="width=devide-width, initial-scale=1" name="viewport">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon-16x16.png">
     <title>Mei's portfolio</title>
   </head>
   <body style="background-color: #272822; margin: 0px;">
