--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" content="width=devide-width, initial-scale=1" name="viewport">
-    
+    <link rel="icon" href="my_logo.png" type="image/png">
     <title>Mei's portfolio</title>
   </head>
   <body style="background-color: #272822; margin: 0px;">
