--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" content="width=devide-width, initial-scale=1" name="viewport">
     <link rel="icon" href="my_logo.png" type="image/png">
     <link rel="icon" href="assets/my_logo.png" type="image/png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <title>Mei's portfolio</title>
   </head>
