--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" content="width=devide-width, initial-scale=1" name="viewport">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="my_logo.png" type="image/png">
-    <link rel="shortcut icon" href="assets/favicons/favicon.ico" type="image/x-icon">
-
+    <link rel="icon" href="https://meistagram.s3.amazonaws.com/my_logo.png" type="image/png">
     <title>Mei's portfolio</title>
   </head>
   <body style="background-color: #272822; margin: 0px;">
