--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" content="width=devide-width, initial-scale=1" name="viewport">
+    <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport">
     <link rel="icon" href="https://meistagram.s3.amazonaws.com/my_logo.png" type="image/png">
     <title>Mei's portfolio</title>
   </head>
