--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="google-site-verification" content="OsX7YKuTwjGn2NS4kw7C75xRr-MpcKr4cBbAZsoyzD4" />
     <link rel="icon" href="https://meistagram.s3.amazonaws.com/my_logo.png" type="image/png">
     <title>Mei's portfolio</title>
   </head>
